--- a/tools/search/websearch.html
+++ b/tools/search/websearch.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PCN Part Search – 100% Internal</title>
   <script src="https://cdn.jsdelivr.net/npm/fuse.js@7.0.0"></script>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="websearch.css" />
 </head>
 <body>
   <div class="container">
@@ -19,6 +19,6 @@
   </div>
 
   <script src="parts.js"></script>        <!-- your 2000–50000 parts -->
-  <script src="script.js"></script>
+  <script src="websearch.js"></script>
 </body>
 </html>
