--- a/tools/search/websearch.html
+++ b/tools/search/websearch.html
@@ -9,9 +9,6 @@
 </head>
 <body>
 
-
-
-  
 <div class="container">
   <div class="header">
     <h1>Part Search</h1>
@@ -28,11 +25,8 @@
   </div>
 </div>
 
+<script src="parts.js"></script>
+<script src="websearch.js"></script>
 
-
-  
-
-  <script src="parts.js"></script>        <!-- your 2000–50000 parts -->
-  <script src="websearch.js"></script>
 </body>
 </html>
