--- a/tools/search/websearch.html
+++ b/tools/search/websearch.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PCN Part Search – 100% Internal</title>
+  <title>Part Search • 50k+ Parts • Instant</title>
   <script src="https://cdn.jsdelivr.net/npm/fuse.js@7.0.0"></script>
   <link rel="stylesheet" href="websearch.css" />
 </head>
@@ -17,7 +17,19 @@
 
   <div class="search-box">
     <label for="search">Part Number or Description:</label>
-    <input type="text" id="search" autocomplete="off" placeholder="e.g. 71-89, housing, shaft, AG01..." />
+    <div class="input-wrapper">
+      <input type="text" id="search" autocomplete="off" placeholder="e.g. 351-226, hinge, AB01..." />
+      <button id="copy-main-btn" title="Copy current part number">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+          <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+        </svg>
+      </button>
+    </div>
+
+    <div id="result-counter" class="result-counter"></div>
+
+
   </div>
 
   <div id="results">
@@ -25,8 +37,7 @@
   </div>
 </div>
 
-<script src="parts.js"></script>
+<script src="websearch_parts.js"></script>
 <script src="websearch.js"></script>
-
 </body>
 </html>
