--- a/index.html
+++ b/index.html
@@ -160,11 +160,26 @@
     <div class="section">
       <h2 class="section-title">WEB</h2>
       <div class="tools-grid">
+
+
         <div class="tool-card">
           <h3>Fast Search</h3>
           <p>Fast search for web app</p>
           <a href="tools/search/websearch.html">Open</a>
-        </div>    
+        </div>
+
+
+
+
+        <div class="tool-card">
+          <h3>Form</h3>
+          <p>Form Stamping</p>
+          <a href="tools/form=index.html">Open</a>
+        </div>
+
+
+
+    
       </div>
     </div>
 
