--- a/tools/form/form.html
+++ b/tools/form/form.html
@@ -4,13 +4,48 @@
 <meta charset="UTF-8">
 <title>Form Viewer</title>
 <style>
-    body { font-family: Arial, sans-serif; margin: 40px; background: #f9f9f9; }
-    h1 { color: #333; }
-    .readonly { background: #eee; color: #666; }
-    button { padding: 10px 20px; font-size: 16px; margin-top: 20px; }
+    body { 
+        font-family: Arial, sans-serif; 
+        margin: 40px; 
+        background: #f9f9f9; 
+    }
+    h1 { 
+        color: #333; 
+    }
+    .user-info {
+        background-color: #e3f2fd;
+        padding: 10px 15px;
+        border-radius: 6px;
+        display: inline-block;
+        font-weight: bold;
+        margin-bottom: 20px;
+        color: #1976d2;
+    }
+    .readonly { 
+        background: #eee; 
+        color: #666; 
+    }
+    .readonly input, .readonly textarea {
+        background: #f5f5f5;
+    }
+    button { 
+        padding: 10px 20px; 
+        font-size: 16px; 
+        margin: 10px 10px 10px 0; 
+        cursor: pointer;
+    }
+    button:disabled {
+        opacity: 0.6;
+        cursor: not-allowed;
+    }
 </style>
 </head>
 <body>
+
+<div class="user-info">
+    Current User: <span id="currentUser">Loading...</span>
+</div>
+
 <h1 id="formId">Form Loading...</h1>
 <p id="mode">Loading...</p>
 
@@ -19,14 +54,28 @@
     <label>Comments: <textarea id="comments" rows="5" cols="50"></textarea></label><br><br>
     <button onclick="saveForm()">Save Changes</button>
     <button onclick="closeForm()">Close / Unlock</button>
+    <button onclick="window.location.reload()">Refresh Status</button>
 </div>
 
 <script>
+// Get URL parameters
 const params = new URLSearchParams(location.search);
 const formId = params.get('form');
 const canEdit = params.get('edit') === '1';
 
-document.getElementById('formId').textContent = 'Form: ' + formId;
+// Get username from localStorage (set in index.html when user first logs in)
+let currentUser = localStorage.getItem('currentDemoUser');
+
+// Fallback: if not found, get from prompt (for direct access)
+if (!currentUser) {
+    currentUser = prompt("Enter your username:", "UserA") || "UserA";
+    localStorage.setItem('currentDemoUser', currentUser);
+}
+
+// Display the username at the top
+document.getElementById('currentUser').textContent = currentUser;
+
+document.getElementById('formId').textContent = 'Form: ' + (formId || 'Unknown');
 document.getElementById('mode').textContent = canEdit 
     ? 'You are editing this form.' 
     : 'READ-ONLY: This form is being edited by another user.';
@@ -37,34 +86,55 @@ if (!canEdit) {
 }
 
 function saveForm() {
-    alert('Changes saved for ' + formId + ' (demo only)');
+    alert('Changes saved for ' + formId + ' (demo only)\nUser: ' + currentUser);
 }
 
 function closeForm() {
     const lockKey = 'lock_' + formId;
     const lockData = localStorage.getItem(lockKey);
     if (lockData) {
-        const { user } = JSON.parse(lockData);
-        if (user === (prompt("Confirm your username to unlock:", "") || "")) {
-            localStorage.removeItem(lockKey);
-            alert("Form unlocked.");
-            window.close();
+        const parsed = JSON.parse(lockData);
+        if (parsed.user === currentUser) {
+            if (confirm(`Unlock form ${formId} and close?`)) {
+                localStorage.removeItem(lockKey);
+                alert("Form unlocked successfully.");
+                window.close();
+            }
+            return;
         }
-    } else {
-        window.close();
     }
+    // If not locked by this user, just close
+    window.close();
 }
 
-// Keep lock alive while tab is open (heartbeat simulation)
+// Heartbeat: Keep the lock alive every 30 seconds
 setInterval(() => {
     const lockKey = 'lock_' + formId;
     const lockData = localStorage.getItem(lockKey);
     if (lockData) {
         const parsed = JSON.parse(lockData);
-        parsed.timestamp = Date.now();
-        localStorage.setItem(lockKey, JSON.stringify(parsed));
+        if (parsed.user === currentUser) {
+            parsed.timestamp = Date.now();
+            localStorage.setItem(lockKey, JSON.stringify(parsed));
+        }
     }
-}, 30000); // Refresh lock every 30 seconds
+}, 30000);
+
+// Optional: Auto-unlock on tab close (best effort)
+window.addEventListener('beforeunload', () => {
+    const lockKey = 'lock_' + formId;
+    const lockData = localStorage.getItem(lockKey);
+    if (lockData) {
+        const parsed = JSON.parse(lockData);
+        if (parsed.user === currentUser) {
+            // Try to unlock (navigator.sendBeacon is more reliable)
+            navigator.sendBeacon && navigator.sendBeacon(location.origin + location.pathname, JSON.stringify({ unlock: formId }));
+            // Fallback: just remove locally
+            localStorage.removeItem(lockKey);
+        }
+    }
+});
 </script>
+
 </body>
 </html>
