--- a/tools/form/form.html
+++ b/tools/form/form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Form Viewer</title>
+<title>Form Viewer Rev04</title>
 <style>
     body { 
         font-family: Arial, sans-serif; 
