--- a/tools/form/index.html
+++ b/tools/form/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-<h1>Interdepartmental Stamping Forms</h1>
+<h1>Interdepartmental Stamping Forms Rev06</h1>
 
 <table id="formsTable">
     <thead>
