--- a/tools/form/index.html
+++ b/tools/form/index.html
@@ -6,7 +6,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
     body { font-family: Arial, sans-serif; margin: 40px; background-color: #f5f5f5; }
-    h1 { color: #333; }
+    h1 { color: #333; margin-bottom: 10px; }
+    .user-bar {
+        background-color: #e3f2fd;
+        padding: 12px 20px;
+        border-radius: 8px;
+        display: inline-block;
+        font-size: 16px;
+        margin-bottom: 20px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .user-bar span { font-weight: bold; color: #1976d2; }
+    .login-btn { background-color: #4CAF50; padding: 10px 20px; font-size: 16px; margin-right: 10px; }
+    .logout-btn { background-color: #f44336; }
+    .login-btn:hover { background-color: #43a047; }
+    .logout-btn:hover { background-color: #d32f2f; }
     table { width: 100%; border-collapse: collapse; background: white; box-shadow: 0 1px 3px rgba(0,0,0,0.2); }
     th, td { padding: 12px 15px; text-align: left; border-bottom: 1px solid #ddd; }
     th { background-color: #4CAF50; color: white; }
@@ -16,13 +30,19 @@
     button:disabled { background-color: #aaa; cursor: not-allowed; }
     .editing { color: #d32f2f; font-weight: bold; }
     .free { color: #388e3c; }
-    .admin-btn { background-color: #f44336; margin-top: 20px; }
+    .admin-btn { background-color: #f44336; margin-top: 20px; padding: 10px 20px; font-size: 16px; }
     .admin-btn:hover { background-color: #d32f2f; }
 </style>
 </head>
 <body>
 
-<h1>Interdepartmental Stamping Forms Rev07</h1>
+<div class="user-bar">
+    Current User: <span id="currentUser">Not logged in</span>
+    <button class="login-btn" id="loginBtn" onclick="login()">Login as...</button>
+    <button class="logout-btn" id="logoutBtn" onclick="logout()" style="display:none;">Logout</button>
+</div>
+
+<h1>Interdepartmental Stamping Forms Rev08</h1>
 
 <table id="formsTable">
     <thead>
@@ -54,14 +74,46 @@
 <button class="admin-btn" onclick="clearAllLocks()">Clear All Locks (for testing)</button>
 
 <script>
-// Username handling
+// Load current user from localStorage
 let CURRENT_USER = localStorage.getItem('currentDemoUser');
-if (!CURRENT_USER) {
-    CURRENT_USER = prompt("Enter your username for this session:", "UserA") || "UserA";
-    localStorage.setItem('currentDemoUser', CURRENT_USER);
+
+function updateUserDisplay() {
+    const userSpan = document.getElementById('currentUser');
+    const loginBtn = document.getElementById('loginBtn');
+    const logoutBtn = document.getElementById('logoutBtn');
+
+    if (CURRENT_USER) {
+        userSpan.textContent = CURRENT_USER;
+        loginBtn.style.display = 'none';
+        logoutBtn.style.display = 'inline-block';
+    } else {
+        userSpan.textContent = 'Not logged in';
+        loginBtn.style.display = 'inline-block';
+        logoutBtn.style.display = 'none';
+    }
+    refreshLocks();
 }
 
-// Lock timeout
+// Login function
+function login() {
+    const username = prompt("Enter your username:", "UserA");
+    if (username && username.trim() !== '') {
+        CURRENT_USER = username.trim();
+        localStorage.setItem('currentDemoUser', CURRENT_USER);
+        updateUserDisplay();
+    }
+}
+
+// Logout function
+function logout() {
+    if (confirm('Logout and clear your username?')) {
+        localStorage.removeItem('currentDemoUser');
+        CURRENT_USER = null;
+        updateUserDisplay();
+    }
+}
+
+// Lock timeout: 5 minutes
 const LOCK_TIMEOUT = 5 * 60 * 1000;
 
 function refreshLocks() {
@@ -104,9 +156,13 @@ function refreshLocks() {
 }
 
 function openForm(formId) {
+    if (!CURRENT_USER) {
+        alert("Please login first!");
+        return;
+    }
+
     const lockKey = 'lock_' + formId;
     let existingLock = localStorage.getItem(lockKey);
-
     let canEdit = true;
 
     if (existingLock) {
@@ -146,12 +202,14 @@ function clearAllLocks() {
     }
 }
 
-// Auto refresh
+// Initial setup
+updateUserDisplay();
 setInterval(refreshLocks, 5000);
 refreshLocks();
+
 </script>
 
-<p><small><strong>Demo Note:</strong> Use the "Clear All Locks" button anytime testing gets stuck. For multi-user testing: different incognito windows or browsers.</small></p>
+<p><small><strong>Tip:</strong> On mobile, use incognito tabs or clear site data to simulate different users.</small></p>
 
 </body>
 </html>
