--- a/tools/form/index.html
+++ b/tools/form/index.html
@@ -6,32 +6,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
     body { font-family: Arial, sans-serif; margin: 40px; background-color: #f5f5f5; }
-    h1 { color: #333; margin-bottom: 10px; }
-    .user-bar {
-        background-color: #e3f2fd;
-        padding: 12px 20px;
-        border-radius: 8px;
-        display: inline-block;
-        font-size: 16px;
-        margin-bottom: 20px;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
+    .user-bar { background-color: #e3f2fd; padding: 12px 20px; border-radius: 8px; display: inline-block; font-size: 16px; margin-bottom: 20px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
     .user-bar span { font-weight: bold; color: #1976d2; }
     .login-btn { background-color: #4CAF50; padding: 10px 20px; font-size: 16px; margin-right: 10px; }
     .logout-btn { background-color: #f44336; }
-    .login-btn:hover { background-color: #43a047; }
-    .logout-btn:hover { background-color: #d32f2f; }
     table { width: 100%; border-collapse: collapse; background: white; box-shadow: 0 1px 3px rgba(0,0,0,0.2); }
     th, td { padding: 12px 15px; text-align: left; border-bottom: 1px solid #ddd; }
     th { background-color: #4CAF50; color: white; }
-    tr:hover { background-color: #f1f1f1; }
     button { padding: 8px 12px; background-color: #2196F3; color: white; border: none; border-radius: 4px; cursor: pointer; }
-    button:hover { background-color: #1976D2; }
-    button:disabled { background-color: #aaa; cursor: not-allowed; }
+    button:disabled { background-color: #aaa; }
     .editing { color: #d32f2f; font-weight: bold; }
     .free { color: #388e3c; }
     .admin-btn { background-color: #f44336; margin-top: 20px; padding: 10px 20px; font-size: 16px; }
-    .admin-btn:hover { background-color: #d32f2f; }
 </style>
 </head>
 <body>
@@ -42,16 +28,9 @@
     <button class="logout-btn" id="logoutBtn" onclick="logout()" style="display:none;">Logout</button>
 </div>
 
-<h1>Interdepartmental Stamping Forms Rev08</h1>
+<h1>Interdepartmental Stamping Forms Rev09</h1>
 
 <table id="formsTable">
-    <thead>
-        <tr>
-            <th>Form ID</th>
-            <th>Now Editing</th>
-            <th>Action</th>
-        </tr>
-    </thead>
     <tbody>
         <tr data-form="PCN/25/AG01/001">
             <td>PCN/25/AG01/001</td>
@@ -74,46 +53,39 @@
 <button class="admin-btn" onclick="clearAllLocks()">Clear All Locks (for testing)</button>
 
 <script>
-// Load current user from localStorage
 let CURRENT_USER = localStorage.getItem('currentDemoUser');
 
 function updateUserDisplay() {
     const userSpan = document.getElementById('currentUser');
-    const loginBtn = document.getElementById('loginBtn');
-    const logoutBtn = document.getElementById('logoutBtn');
-
     if (CURRENT_USER) {
         userSpan.textContent = CURRENT_USER;
-        loginBtn.style.display = 'none';
-        logoutBtn.style.display = 'inline-block';
+        document.getElementById('loginBtn').style.display = 'none';
+        document.getElementById('logoutBtn').style.display = 'inline-block';
     } else {
         userSpan.textContent = 'Not logged in';
-        loginBtn.style.display = 'inline-block';
-        logoutBtn.style.display = 'none';
+        document.getElementById('loginBtn').style.display = 'inline-block';
+        document.getElementById('logoutBtn').style.display = 'none';
     }
     refreshLocks();
 }
 
-// Login function
 function login() {
     const username = prompt("Enter your username:", "UserA");
-    if (username && username.trim() !== '') {
+    if (username && username.trim()) {
         CURRENT_USER = username.trim();
         localStorage.setItem('currentDemoUser', CURRENT_USER);
         updateUserDisplay();
     }
 }
 
-// Logout function
 function logout() {
-    if (confirm('Logout and clear your username?')) {
+    if (confirm('Logout?')) {
         localStorage.removeItem('currentDemoUser');
         CURRENT_USER = null;
         updateUserDisplay();
     }
 }
 
-// Lock timeout: 5 minutes
 const LOCK_TIMEOUT = 5 * 60 * 1000;
 
 function refreshLocks() {
@@ -123,13 +95,11 @@ function refreshLocks() {
         const statusCell = row.querySelector('.status');
         const button = row.querySelector('button');
         const lockKey = 'lock_' + formId;
-
         const lockData = localStorage.getItem(lockKey);
-        if (lockData) {
-            let { user, timestamp } = JSON.parse(lockData);
-            const age = Date.now() - timestamp;
 
-            if (age > LOCK_TIMEOUT) {
+        if (lockData) {
+            const { user, timestamp } = JSON.parse(lockData);
+            if (Date.now() - timestamp > LOCK_TIMEOUT) {
                 localStorage.removeItem(lockKey);
                 statusCell.textContent = "None";
                 statusCell.className = "status free";
@@ -138,7 +108,7 @@ function refreshLocks() {
             } else {
                 statusCell.textContent = user + " (editing)";
                 statusCell.className = "status editing";
-                if (user === CURRENT_USER) {
+                if (user.toLowerCase() === (CURRENT_USER || '').toLowerCase()) {
                     button.textContent = "You are editing";
                     button.disabled = true;
                 } else {
@@ -162,17 +132,15 @@ function openForm(formId) {
     }
 
     const lockKey = 'lock_' + formId;
-    let existingLock = localStorage.getItem(lockKey);
+    let lockData = localStorage.getItem(lockKey);
     let canEdit = true;
 
-    if (existingLock) {
-        let { user, timestamp } = JSON.parse(existingLock);
-        const age = Date.now() - timestamp;
-
-        if (age > LOCK_TIMEOUT) {
+    if (lockData) {
+        const { user, timestamp } = JSON.parse(lockData);
+        if (Date.now() - timestamp > LOCK_TIMEOUT) {
             localStorage.removeItem(lockKey);
-            existingLock = null;
-        } else if (user !== CURRENT_USER) {
+            lockData = null;
+        } else if (user.toLowerCase() !== CURRENT_USER.toLowerCase()) {
             canEdit = false;
         }
     }
@@ -187,29 +155,20 @@ function openForm(formId) {
     const editParam = canEdit ? "?edit=1" : "?edit=0";
     window.open('form.html?form=' + encodeURIComponent(formId) + editParam, '_blank');
 
-    setTimeout(refreshLocks, 300);
+    setTimeout(refreshLocks, 500);
 }
 
 function clearAllLocks() {
-    if (confirm("Clear ALL form locks? This is for testing only.")) {
-        for (let key in localStorage) {
-            if (key.startsWith('lock_')) {
-                localStorage.removeItem(key);
-            }
-        }
+    if (confirm("Clear ALL locks?")) {
+        Object.keys(localStorage).filter(k => k.startsWith('lock_')).forEach(k => localStorage.removeItem(k));
         refreshLocks();
         alert("All locks cleared!");
     }
 }
 
-// Initial setup
 updateUserDisplay();
 setInterval(refreshLocks, 5000);
 refreshLocks();
-
 </script>
-
-<p><small><strong>Tip:</strong> On mobile, use incognito tabs or clear site data to simulate different users.</small></p>
-
 </body>
 </html>
