--- a/tools/form/form.html
+++ b/tools/form/form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>rev12 Form Viewer</title>
+<title>rev13 Form Viewer</title>
 <style>
     body { font-family: Arial, sans-serif; margin: 40px; background: #f9f9f9; }
     .user-info { background-color: #e3f2fd; padding: 10px 15px; border-radius: 6px; display: inline-block; font-weight: bold; margin-bottom: 20px; color: #1976d2; }
@@ -34,7 +34,6 @@ const formId = params.get('form') || 'Unknown';
 const urlUser = params.get('user') || 'Unknown';
 const canEdit = params.get('edit') === '1';
 
-// Fixed display
 document.getElementById('currentUser').textContent = urlUser;
 document.getElementById('formId').textContent = 'Form: ' + formId;
 
@@ -69,7 +68,7 @@ function forceUnlock() {
     }
 }
 
-// Keep lock alive if you have edit mode
+// Keep lock alive if in edit mode
 if (canEdit) {
     setInterval(() => {
         localStorage.setItem('lock_' + formId, JSON.stringify({
